snapshot-tests/tests/snapshots/parser__bad_booleans__leading_t.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected the literal `true`, found something else at `foo`
  ┌─ leading_t:1:7
  │
1 │ foo = t2
  │       ^ expected the literal `true`
